src/objects/PowerLoader__BulkEditTemplate__c.object
<CustomObject>
    <fields>
        <fullName>PowerLoader__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PowerLoader__JustMyRecords__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JustMyRecords</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PowerLoader__ObjectAPIName__c</fullName>
        <label>ObjectAPIName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PowerLoader__UID__c</fullName>
        <label>UID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Grid Template</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grid Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>